🐛 last bit of bug squashing from Loom feedback

--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -1,6 +1,5 @@
 section {
   @include grid-container;
-  margin-left: 0;
 }
 
 .section__inner--c4 {
